--- a/contact_us.html
+++ b/contact_us.html
@@ -75,6 +75,83 @@
         </div>
     </div>
 
+    <div class="team">
+        <div class="team_bg">
+            <div class="team_rec_container"></div>
+            <div class="team_tri_container">
+                <div class="team_tri1"></div>
+                <div class="team_tri2"></div>
+            </div>
+            
+            <div class="team_rec_container2"></div>
+        </div>
+        <div class="team_content">
+            <h2>Our Team</h2>
+            <div class="all_team">
+                <div class="team_member">
+                    <div class="team_photo">
+                        <img src="pictures/team1.png" alt="">
+                    </div>
+                    <div class="team_info">
+                        <p>
+                            <h3>Group manager</h3> 
+                            <br>Name:                            Aivy Tee
+                            <br>Contact Number:          012-7200251 
+                            <br>Email:                             aivyai10389@gmail.com
+                        </p>
+                        <hr>
+
+                    </div>
+                </div>
+                <div class="team_member">
+                    <div class="team_photo">
+                        <img src="pictures/team1.png" alt="">
+                    </div>
+                    <div class="team_info">
+                        <p>
+                            <h3>Group manager</h3> 
+                            <br>Name:                            Aivy Tee
+                            <br>Contact Number:          012-7200251 
+                            <br>Email:                             aivyai10389@gmail.com
+                        </p>
+                        <hr>
+
+                    </div>
+                </div>
+                <div class="team_member">
+                    <div class="team_photo">
+                        <img src="pictures/team1.png" alt="">
+                    </div>
+                    <div class="team_info">
+                        <p>
+                            <h3>Group manager</h3> 
+                            <br>Name:                            Aivy Tee
+                            <br>Contact Number:          012-7200251 
+                            <br>Email:                             aivyai10389@gmail.com
+                        </p>
+                        <hr>
+
+                    </div>
+                </div>
+                <div class="team_member">
+                    <div class="team_photo">
+                        <img src="pictures/team1.png" alt="">
+                    </div>
+                    <div class="team_info">
+                        <p>
+                            <h3>Group manager</h3> 
+                            <br>Name:                            Aivy Tee
+                            <br>Contact Number:          012-7200251 
+                            <br>Email:                             aivyai10389@gmail.com
+                        </p>
+                        <hr>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="card_container">
         <div class="card">
             <div class="card_info">
