--- a/our_company.html
+++ b/our_company.html
@@ -90,6 +90,19 @@
         </div>
     </div>
 
+    <div class="strategic-patner"></div>
+        <div class="strategic-tittle">
+            <h2>OUR STRATEGIC PARTNER</h2>
+        </div>
+        <div class="strategic-logo">
+            <img src="pictures/GE_logo.png" alt="GE">
+            <img src="pictures/sg_logo.png" alt="SG">
+            <img src="pictures/rockwill_logo.png" alt="Rockwills">
+            <img src="pictures/rhb_logo.png" alt="RHB">
+            <img src="pictures/bni_logo.png" alt="BNI">
+        </div>
+    </div>
+
     <footer>
         <div class="container">
             <p>&copy; 2024 Example Company. All rights reserved.</p>
