--- a/our_company.html
+++ b/our_company.html
@@ -55,7 +55,7 @@
                 </div>
                 <img src="pictures/our_company_1.png" alt="">
                 <img src="pictures/our_company_2.png" alt="">
-                <div class="ourcompany_background scroll-hidden">
+                <div class="ourcompany_background scroll-hidden1">
                     <p>His company is currently expanding its team and is recruiting for various positions, including administrative sales, sales partners, telemarketing, and customer service assistants, aiming to further enhance its service capabilities.
                         <br><br>
                         Under the leadership of Jason Liew and his team, JV Wealth Advisory continuously strives for excellence, ensuring that every client enjoys personalized financial advisory services, safeguarding the growth of their wealth.
@@ -64,15 +64,15 @@
             </div>
         </div>
     </div>
-    <div class="ourcompany_content scroll-hidden">
+    <div class="ourcompany_content">
         <div class="whyus scroll-hidden1">
-            <h2>Why us ?</h2>
-            <p>We offer customized financial solutions that are designed to meet your individual goals.
+            <h2 class="scroll-hidden1">Why us ?</h2>
+            <p class="scroll-hidden1">We offer customized financial solutions that are designed to meet your individual goals.
                 Our team comprises seasoned professionals with extensive experience in the financial sector.</p>
         </div>
-        <div class="commitment scroll-hidden">
-            <h2>Our Commitment</h2>
-            <p>At JV Wealth Advisory, we believe in providing transparent, reliable, and professional financial advice. Our goal is to simplify complex financial decisions and help you navigate life's important financial milestones with confidence.</p>
+        <div class="commitment scroll-hidden1">
+            <h2 class="scroll-hidden1">Our Commitment</h2>
+            <p class="scroll-hidden1">At JV Wealth Advisory, we believe in providing transparent, reliable, and professional financial advice. Our goal is to simplify complex financial decisions and help you navigate life's important financial milestones with confidence.</p>
         </div>
     </div>
 
