--- a/contact_us.html
+++ b/contact_us.html
@@ -12,7 +12,10 @@
 <body>
     <header>
         <div class="container">
-            <h1>JV Wealth Advisory</h1>
+            <div class="jv">
+                <img src="pictures/jvlogo.png" alt="">
+                <h1>JV Wealth Advisory</h1>
+            </div>
             <nav>
                 <ul id="main-menu">
                     <li><a href="index.html" class="nav-link" id="homelink">Home</a></li>
