--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             const iframeWrapper = document.querySelector('.iframe-wrapper');
             const iframes = document.querySelectorAll('.iframe-wrapper iframe');
             const iframeWidth = iframes[0].offsetWidth + 20; // Include margin
-            const maxIndex = iframes.length - 3; // Show two iframes at once
+            const maxIndex = iframes.length -1 ; // Show two iframes at once
 
             currentIndex += direction;
 
