--- a/v_m_v.html
+++ b/v_m_v.html
@@ -46,8 +46,10 @@
     
     
     <div class="v_m_v_title">
-        <h2>Vission, Mission & Value</h2>
-        <p>About us</p>
+        <div>
+            <h2>Vission, Mission & Value</h2>
+            <p>About us</p>
+        </div>
 
     </div>
 
