--- a/our_company.html
+++ b/our_company.html
@@ -44,8 +44,11 @@
     </header>
 
     <div class="our_company_title">
-        <h2>Our Company</h2>
-        <p>About us</p>
+        <div>
+            <h2>Our Company</h2>
+            <p>About us</p>
+
+        </div>
     </div>
 
     <div class="blue_background">
