--- a/contact_us.html
+++ b/contact_us.html
@@ -52,7 +52,7 @@
         <img src="pictures/panda_icon1.png" alt="Panda Icon" class="panda-icon">
     </section>
 
-    <div class="address scroll-hidden2">
+    <div class="address scroll-hidden">
         <div class="address_content">
             <img src="pictures/map_pin.png" alt="">
             <p>No. 21-02, Jalan Ros Merah 2/8, Taman Johor Jaya, 81100, Johor Bahru, Johor, Malaysia.</p>
@@ -61,7 +61,7 @@
     </div>
 
     <div class="enquiry scroll-hidden">
-        <div class="enquiry_content scroll-hidden2">
+        <div class="enquiry_content ">
             <div class="enquiry_content_bg">
                 <h2>Let’s get in touch >>></h2>
                 <p>
@@ -75,7 +75,7 @@
                 <div class="triangle2"></div>
             </div>
         </div>
-        <div class="form scroll-hidden2">
+        <div class="form ">
             
         </div>
     </div>
@@ -226,8 +226,6 @@
         const hiddenElementsLeft = document.querySelectorAll('.scroll-hidden1');
         hiddenElementsLeft.forEach(el => observer.observe(el)); 
 
-        const hiddenElementsSpin = document.querySelectorAll('.scroll-hidden2');
-        hiddenElementsSpin.forEach(el => observer.observe(el)); 
     });
 
 
