--- a/v_m_v.html
+++ b/v_m_v.html
@@ -72,7 +72,7 @@
                     <p>Create Value And Helps People Who Believe in Finance Tools By Our Professional Team</p>
                 </div>
             </div>
-            <div class="value scroll-hidden">
+            <div class="value scroll-hidden1">
                 <img src="pictures/value.png">
                 <img class="icon" src="pictures/value_logo.png">
                 <div class="value_background">
