--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             <button class="prev" onclick="document.getElementById('slide1').checked ? document.getElementById('slide3').checked = true : document.querySelector('input[name=carousel]:checked').previousElementSibling.checked = true;">&#10094;</button>
             <button class="next" onclick="document.getElementById('slide3').checked ? document.getElementById('slide1').checked = true : document.querySelector('input[name=carousel]:checked').nextElementSibling.checked = true;">&#10095;</button>
         </div>
-        <div class="homecontent scroll-hidden1">
-            <h2>Plan ahead and navigate safely</h2>
-            <p>Planning ahead is an act of wisdom because life is full of unpredictable risks. Insurance provides safe navigation for your every choice, ensuring you face challenges without worries</p>
+        <div class="homecontent">
+            <h2 class="scroll-hidden1">Plan ahead and navigate safely</h2>
+            <p class="scroll-hidden1">Planning ahead is an act of wisdom because life is full of unpredictable risks. Insurance provides safe navigation for your every choice, ensuring you face challenges without worries</p>
         </div>
     </div>
 
