--- a/career_zh.html
+++ b/career_zh.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh en">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="header.css">
     <link rel="stylesheet" type="text/css" href="card.css">
     <link rel="stylesheet" type="text/css" href="career.css">
-    <title>Career</title>
+    <title>职业生涯</title>
 </head>
 
 <body>
@@ -19,21 +19,21 @@
             </div>
             <nav>
                 <ul id="main-menu">
-                    <li><a href="index.html" class="nav-link" id="homelink">Home</a></li>
+                    <li><a href="index_zh.html" class="nav-link" id="homelink">主页</a></li>
                     <li>
-                        <a href="#" class="nav-link" id="aboutUsLink">About Us</a>
+                        <a href="#" class="nav-link" id="aboutUsLink">关于我们</a>
                         <ul id="dropdownMenu" class="dropdown">
-                            <a href="our_company.html"><li>Our Company</li></a>
-                            <a href="v_m_v.html"><li>Vision, Mission & Value</li></a>
-                            <a href="achievement.html"><li>Achievement</li></a>
+                            <a href="our_company_zh.html"><li>我们的公司</li></a>
+                            <a href="v_m_v_zh.html"><li>愿景，使命与价值</li></a>
+                            <a href="achievement_zh.html"><li>成就与社区贡献</li></a>
                         </ul>
                     </li>
-                    <li><a href="services.html" class="nav-link" id="servicesLink">Our Services</a></li>
-                    <li><a href="contact_us.html" class="nav-link" id="contactLink">Contact Us</a></li>
-                    <li><a href="career.html" class="nav-link" id="careerLink">Career</a></li>
+                    <li><a href="services_zh.html" class="nav-link" id="servicesLink">我们的服务</a></li>
+                    <li><a href="contact_us_zh.html" class="nav-link" id="contactLink">联络我们</a></li>
+                    <li><a href="career_zh.html" class="nav-link" id="careerLink">职业生涯</a></li>
                     <li>
                         <div class="language-switch">
-                            <a href="career_zh.html" id="languageButton">中文</a>
+                            <a href="index.html" id="languageButton">English</a>
                         </div>
                     </li>
                 </ul>
@@ -48,28 +48,28 @@
     <section class="services" >
     <div class="container">
         <h2 class="serviceh2">HERE WE HAVE</h2>
-        <h3 class="serviceh3">Car<span class="green">eer</span></h3>
-        <p class="service-provide">JV Wealth Advisory need ......</p>
+        <h3 class="serviceh3">职业<span class="green">生涯</span></h3>
+        <p class="service-provide">JV Wealth Advisory 需要 ......</p>
     </div>
     <img src="pictures/panda_icon1.png" alt="Panda Icon" class="panda-icon">
     </section>
 
     <div class="admin_sales scroll-hidden" >
         <div class="admin_sales_content">
-            <h2>Admin <span class="green">Sales</span></h2>
-            <p>Responsibilities:
+            <h2>行政<span class="green">销售</span></h2>
+            <p>职责:
             <ul>
                 <li>
-                    Support the sales team by managing schedules, processing orders, and handling customer inquiries.
+                    通过管理日程安排、处理订单和处理客户咨询为销售团队提供支持。
                 </li>
                 <li>
-                    Maintain sales records, prepare reports, and update the CRM system.
+                    维护销售记录、编写报告并更新客户关系管理系统。
                 </li>
                 <li>
-                    Coordinate with other departments to ensure smooth workflow and timely delivery of services.
+                    与其他部门协调，确保工作流程顺畅并及时提供服务。
                 </li>
                 <li>
-                    Assist in the preparation of sales presentations and proposals.
+                    协助准备销售演示文稿和建议书。
                 </li>
             </ul>
             </p>
@@ -80,22 +80,20 @@
     <div class="sales_partner scroll-hidden1">
         <img src="pictures/sales_partner.png" alt="">
         <div class="sales_partner_content">
-            <h2>Sales <span class="green">Partner</span></h2>
-            <p>Responsibilities:
+            <h2>销售<span class="green">合作伙伴</span></h2>
+            <p>职责:
             <ul>
                 <li>
-                    Develop and maintain relationships with clients, understanding their financial needs and offering
-                    tailored solutions.
+                    发展并维护与客户的关系，了解他们的财务需求并提供量身定制的解决方案。
                 </li>
                 <li>
-                    Identify new business opportunities and work to expand the client base.
+                    寻找新的业务机会，努力扩大客户群。
                 </li>
                 <li>
-                    Collaborate with internal teams to ensure client satisfaction and successful implementation of
-                    services.
+                    与内部团队合作，确保客户满意并成功实施服务。
                 </li>
                 <li>
-                    Monitor market trends and competitor activities to adjust sales strategies accordingly.
+                    监控市场趋势和竞争对手的活动，以相应调整销售策略。
                 </li>
             </ul>
             </p>
@@ -104,21 +102,20 @@
 
     <div class="telemarketing scroll-hidden">
         <div class="telemarketing_content">
-            <h2>Tele<span class="green">marketing</span></h2>
-            <p>Responsibilities:
+            <h2>电子<span class="green">市场营销</span></h2>
+            <p>职责:
             <ul>
                 <li>
-                    Conduct outbound calls to potential clients, introducing them to the services offered by JV Wealth
-                    Advisory.
+                    对潜在客户进行外呼，向他们介绍 JV Wealth Advisory 提供的服务。
                 </li>
                 <li>
-                    Qualify leads and schedule appointments for the sales team.
+                    筛选潜在客户，为销售团队安排预约。
                 </li>
                 <li>
-                    Provide information to clients, answer questions, and handle objections.
+                    向客户提供信息、回答问题并处理异议。
                 </li>
                 <li>
-                    Maintain detailed records of interactions in the CRM system.
+                    在客户关系管理系统中保存详细的互动记录。
                 </li>
             </ul>
             </p>
@@ -129,20 +126,20 @@
     <div class="customer_services scroll-hidden1">
         <img src="pictures/customer_services.png" alt="">
         <div class="customer_services_content">
-            <h2>Customer <span class="green">Services</span></h2>
-            <p>Responsibilities:
+            <h2>客户<span class="green">服务</span></h2>
+            <p>职责:
             <ul>
                 <li>
-                    Serve as the primary point of contact for clients, addressing their inquiries, and resolving issues.
+                    作为客户的主要联系人，处理客户的咨询并解决问题。
                 </li>
                 <li>
-                    Provide support during and after the sales process, ensuring client satisfaction.
+                    在销售过程中和之后提供支持，确保客户满意。
                 </li>
                 <li>
-                    Manage client accounts, including updating information and processing requests.
+                    管理客户账户，包括更新信息和处理请求。
                 </li>
                 <li>
-                    Work closely with other departments to ensure a seamless client experience.
+                    与其他部门密切合作，确保客户体验无缝衔接。
                 </li>
             </ul>
             </p>
@@ -151,26 +148,23 @@
 
     <div class="internship scroll-hidden">
         <div class="internship_content">
-            <h2>Intern<span class="green">ship</span></h2>
-            <p>Responsibilities:
+            <h2>实<span class="green">习</span></h2>
+            <p>职责:
             <ul>
                 <li>
-                    Participate in meetings with clients, learning how to communicate effectively and understand client
-                    needs.
+                    参加与客户的会议，学习如何有效沟通并了解客户需求。
                 </li>
                 <li>
-                    Work closely with mentors and senior team members to gain hands-on experience and industry insights.
+                    与导师和资深团队成员密切合作，获得实践经验和行业见解。
                 </li>
                 <li>
-                    Engage in team projects that contribute to the overall goals of the firm.
+                    参与有助于实现公司总体目标的团队项目。
                 </li>
                 <li>
-                    Contribute to specific projects, such as market research, business development, or process
-                    improvement initiatives.
+                    参与特定项目，如市场调研、业务开发或流程改进计划。
                 </li>
                 <li>
-                    Present findings and recommendations to the team, gaining experience in professional communication
-                    and presentation skills.
+                    向团队展示调查结果和建议，积累专业沟通和演讲技巧方面的经验。
                 </li>
             </ul>
             </p>
@@ -180,24 +174,24 @@
 
     <div class="requirement_benefit scroll-hidden1">
         <div class="requirement">
-            <h2>Require<span class="green">ment</span></h2>
+            <h2>需<span class="green">求</span></h2>
             <ul>
-                <li>STPM and above</li>
-                <li>Proficient in Mandarin, English, and Malay (fluency not required)</li>
-                <li>Must have own transportation</li>
-                <li>Responsible</li>
-                <li>Good phone etiquette</li>
-                <li>Strong learning ability</li>
-                <li>Willing to learn sales</li>
-                <li>Basic PowerPoint and Excel</li>
+                <li>大马高等教育文凭（STPM）及以上</li>
+                <li>精通普通话、英语和马来语（不要求流利）</li>
+                <li>必须自备交通工具</li>
+                <li>有责任心</li>
+                <li>良好的电话礼仪</li>
+                <li>学习能力强</li>
+                <li>愿意学习销售</li>
+                <li>基本的 PowerPoint 和 Excel</li>
             </ul>
         </div>
         <div class="benefit">
-            <h2>Bene<span class="green">fit</span></h2>
+            <h2>公司<span class="green">福利</span></h2>
             <ul>
-                <li>Commission system</li>
-                <li>Comprehensive training program</li>
-                <li>Promotion opportunities</li>
+                <li>佣金制度</li>
+                <li>全面的培训计划</li>
+                <li>晋升机会</li>
             </ul>
         </div>
         <div class="green_rec"></div>
