--- a/index_zh.html
+++ b/index_zh.html
@@ -19,18 +19,18 @@
             </div>
             <nav>
                 <ul id="main-menu">
-                    <li><a href="index.html" class="nav-link" id="homelink">主页</a></li>
+                    <li><a href="index_zh.html" class="nav-link" id="homelink">主页</a></li>
                     <li>
                         <a href="#" class="nav-link" id="aboutUsLink">关于我们</a>
                         <ul id="dropdownMenu" class="dropdown">
-                            <a href="our_company.html"><li>我们的公司</li></a>
-                            <a href="v_m_v.html"><li>愿景，使命与价值</li></a>
-                            <a href="achievement.html"><li>成就与社区贡献</li></a>
+                            <a href="our_company_zh.html"><li>我们的公司</li></a>
+                            <a href="v_m_v_zh.html"><li>愿景，使命与价值</li></a>
+                            <a href="achievement_zh.html"><li>成就与社区贡献</li></a>
                         </ul>
                     </li>
-                    <li><a href="services.html" class="nav-link" id="servicesLink">我们的服务</a></li>
-                    <li><a href="contact_us.html" class="nav-link" id="contactLink">联络我们</a></li>
-                    <li><a href="career.html" class="nav-link" id="careerLink">职业生涯</a></li>
+                    <li><a href="services_zh.html" class="nav-link" id="servicesLink">我们的服务</a></li>
+                    <li><a href="contact_us_zh.html" class="nav-link" id="contactLink">联络我们</a></li>
+                    <li><a href="career_zh.html" class="nav-link" id="careerLink">职业生涯</a></li>
                     <li>
                         <div class="language-switch">
                             <a href="index.html" id="languageButton">English</a>
@@ -88,7 +88,7 @@
             <br><span class="green">您的生活</span>和<span class="green">未来</span></h2>
         <p>JV Wealth Advisory 是一家致力于为客户提供全面财务规划和财富管理服务的公司。公司总部位于马来西亚新山市新山再也，.......</p>
         <div class="custom-hr">
-            <span> <a href="our_company.html">更加详细</a></span> <!-- 可放置文字或留空 -->
+            <span> <a href="our_company_zh.html">更加详细</a></span> <!-- 可放置文字或留空 -->
         </div>
         <div class="data_container">
             <p class="data"><span class="green">13</span><br>经验年限</p>
@@ -102,13 +102,13 @@
 
     <div class="our_product_and_services_summary scroll-hidden">
         <div class="p_s_summary_content">
-            <h2>我们的 <span class="green">产品</span>和<span class="green">服务</span></h2>
+            <h2>我们的<span class="green">产品</span>和<span class="green">服务</span></h2>
             <p>JV Wealth Advisory 提供财务规划、医疗规划、遗产规划和索赔服务 ........</p>
         </div>
 
         <div class="p_s_big_container">
             <div class="custom-hr">
-                <span> <a href="services.html">更加详细</a></span> <!-- 可放置文字或留空 -->
+                <span> <a href="services_zh.html">更加详细</a></span> <!-- 可放置文字或留空 -->
             </div>
             <div class="p_s_container">
                 <div class="p_s" onclick="window.location.href='services.html#finance-section'">
@@ -132,7 +132,7 @@
             <h2>职业<span class="green">生涯</span></h2>
             <p>在 JV Wealth Advisory，我们是一个充满机遇、致力于创新和发展的团队。无论您是经验丰富的专家，还是雄心勃勃的新人，我们都将为您提供发展平台。加入我们，与顶级金融专家合作，挑战自我，实现职业理想。让我们携手共创美好未来！....... </p>
             <div class="custom-hr">
-                <span> <a href="career.html">更加详细</a></span> <!-- 可放置文字或留空 -->
+                <span> <a href="career_zh.html">更加详细</a></span> <!-- 可放置文字或留空 -->
             </div>
         </div>
         <img src="pictures/career_bg.png" alt="">
