--- a/our_company.html
+++ b/our_company.html
@@ -32,7 +32,7 @@
                     <li><a href="career.html" class="nav-link" id="careerLink">Career</a></li>
                     <li>
                         <div class="language-switch">
-                            <a href="index_zh.html" id="languageButton">中文</a>
+                            <a href="our_company_zh.html" id="languageButton">中文</a>
                         </div>
                     </li>
                 </ul>
