--- a/achievement.html
+++ b/achievement.html
@@ -33,7 +33,7 @@
                     <li><a href="career.html" class="nav-link" id="careerLink">Career</a></li>
                     <li>
                         <div class="language-switch">
-                            <a href="index_zh.html" id="languageButton">中文</a>
+                            <a href="achievement_zh.html" id="languageButton">中文</a>
                         </div>
                     </li>
                 </ul>
