--- a/career_zh.html
+++ b/career_zh.html
@@ -33,7 +33,7 @@
                     <li><a href="career_zh.html" class="nav-link" id="careerLink">职业生涯</a></li>
                     <li>
                         <div class="language-switch">
-                            <a href="career.css" id="languageButton">English</a>
+                            <a href="career.html" id="languageButton">English</a>
                         </div>
                     </li>
                 </ul>
